<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- 开源协议 -->
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <!-- 项目信息 -->
    <scm>
        <url>https://gitee.com/oyzh1994/base</url>
        <connection>scm:git:https://gitee.com/oyzh1994/base</connection>
        <developerConnection>scm:git:https://gitee.com/oyzh1994/base</developerConnection>
    </scm>
    <!-- 开发者信息 -->
    <developers>
        <developer>
            <id>oyzh</id>
            <name>oyzh</name>
            <email>1987803602@qq.com</email>
        </developer>
    </developers>
    <!-- 项目主页 -->
    <url>https://gitee.com/oyzh1994/base</url>

    <modelVersion>4.0.0</modelVersion>

    <version>1.0.3</version>
    <modules>
        <module>base-common</module>
        <module>base-store</module>
        <module>base-ssh</module>
        <module>base-i18n</module>
        <module>base-event</module>
    </modules>
    <groupId>io.github.oyzh1994</groupId>
    <packaging>pom</packaging>
    <name>base</name>
    <artifactId>base</artifactId>
    <description>各种基础功能的实现</description>

    <properties>
        <h2.version>2.4.240</h2.version>
        <poi.version>5.5.1</poi.version>
        <base.version>1.0.3</base.version>
        <sshd.version>2.18.0</sshd.version>
        <jsch.version>2.28.0</jsch.version>
        <sshj.version>0.40.0</sshj.version>
        <zxing.version>3.5.4</zxing.version>
        <junit.version>4.13.2</junit.version>
        <slf4j.version>2.0.17</slf4j.version>
        <guava.version>33.5.0-jre</guava.version>
        <!-- <sqlite.version>3.47.1.0</sqlite.version> -->
        <netty.version>4.2.10.Final</netty.version>
        <fastjson.version>2.0.62</fastjson.version>
        <!-- <fastjson.version>1.2.83</fastjson.version> -->
        <jgit.version>7.7.0.202606012155-r</jgit.version>
        <bouncycastle.version>1.84</bouncycastle.version>
        <commons-compress.version>1.28.0</commons-compress.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <exec-maven-plugin.version>3.6.3</exec-maven-plugin.version>
        <spring-boot-maven-plugin.version>4.0.5</spring-boot-maven-plugin.version>
    </properties>

    <!-- 声明仓库 -->
    <repositories>
        <repository>
            <id>center</id>
            <name>center</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public/</url>
        </repository>
        <repository>
            <id>tencent</id>
            <name>tencent</name>
            <url>https://mirrors.tencent.com/nexus/repository/maven-public/</url>
        </repository>
        <!-- <repository> -->
        <!--     <id>jetbrains</id> -->
        <!--     <name>jetbrains</name> -->
        <!--     <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies/</url> -->
        <!-- </repository> -->
        <!-- <repository> -->
        <!--     <id>sonatype</id> -->
        <!--     <name>sonatype</name> -->
        <!--     <url>https://oss.sonatype.org/content/groups/public/</url> -->
        <!-- </repository> -->
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- 自定义类库，通用模块 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>base-common</artifactId>
                <version>${base.version}</version>
            </dependency>
            <!-- 自定义类库，存储模块 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>base-store</artifactId>
                <version>${base.version}</version>
            </dependency>
            <!-- 自定义类库，ssh模块 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>base-ssh</artifactId>
                <version>${base.version}</version>
            </dependency>
            <!-- 自定义类库，i18n模块 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>base-i18n</artifactId>
                <version>${base.version}</version>
            </dependency>
            <!-- 自定义类库，事件模块 -->
            <dependency>
                <groupId>io.github.oyzh1994</groupId>
                <artifactId>base-event</artifactId>
                <version>${base.version}</version>
            </dependency>
            <!-- 测试类库 -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                    <debug>false</debug>
                    <debuglevel>none</debuglevel>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- 配置脚本 -->
    <profiles>
        <profile>
            <!-- 发布用的脚本 -->
            <id>release</id>
            <build>
                <plugins>
                    <!-- Source -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Javadoc -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.10.1</version>
                    </plugin>
                    <!-- GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- 部署到中心仓库 -->
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>ossrh</publishingServerId>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
